# ray-tracer

./: Cargo.toml  Readme.md  shell.nix  test.ppm
src/: camera.rs  error.rs  image.rs  lib.rs  main.rs  materials.rs  math.rs  ray.rs  scenes.rs  world.rs
src/math/: mod.rs  sphere.rs  vec3.rs
