[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["guilhermo <guilhermo.readonly@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
image = "0.24.8"

winit = "0.29.10"
env_logger = "0.11.0"
log = "0.4"
wgpu = "0.18.0"

